--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 langsmith_API=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
+TAVILY_API_KEY=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
+GOOGLE_API_KEY=AIzaSyA9eUIUQngDhLZpwzlYvROBtkqNtbP32ek
