--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
-langsmith_API=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
-TAVILY_API_KEY=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
-GOOGLE_API_KEY=AIzaSyA9eUIUQngDhLZpwzlYvROBtkqNtbP32ek
+langsmith_API=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
+TAVILY_API_KEY=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
+GOOGLE_API_KEY=AIzaSyC9iIWJ2E2YM7-73Dr6H-Fvuq8CtmaaNMI
+EMAIL_SENDER=yash.rajput.0215@gmail.com
+EMAIL_PASSWORD=uzartzjilucocabw
